--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@angular/core": "^8.0.2",
     "@angular/flex-layout": "^8.0.0-beta.26",
     "@angular/forms": "^8.0.2",
-    "@angular/http": "^7.2.15",
     "@angular/material": "^8.0.1",
     "@angular/platform-browser": "^8.0.2",
     "@angular/platform-browser-dynamic": "^8.0.2",
@@ -37,17 +36,18 @@
     "popper.js": "^1.14.7",
     "rxjs": "^6.5.2",
     "rxjs-compat": "^6.5.2",
-    "zone.js": "^0.9.1"
+    "tslib": "^1.9.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.800.3",
+    "@angular-devkit/build-angular": "~0.800.0",
     "@angular/cli": "^8.0.3",
     "@angular/compiler-cli": "^8.0.2",
     "@angular/language-service": "^8.0.2",
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^12.0.10",
-    "codelyzer": "^5.1.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^4.1.0",
