chore: follow tutorial to set up basics
- add animations and bazel compiler

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "postinstall": "ngc -p ./angular-metadata.tsconfig.json",
+    "start": "ng serve -o",
+    "start-prod": "ng serve --prod -o",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -41,9 +43,14 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.800.0",
+    "@angular/bazel": "^8.0.2",
     "@angular/cli": "^8.0.3",
     "@angular/compiler-cli": "^8.0.2",
     "@angular/language-service": "^8.0.2",
+    "@bazel/bazel": "^0.26.0",
+    "@bazel/ibazel": "^0.10.2",
+    "@bazel/karma": "0.31.1",
+    "@bazel/typescript": "0.31.1",
     "@fortawesome/fontawesome-free": "^5.9.0",
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.2",
