--- a/angular.json
+++ b/angular.json
@@ -9,50 +9,27 @@
       "projectType": "application",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular/bazel:build",
           "options": {
-            "outputPath": "dist",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "tsConfig": "src/tsconfig.app.json",
-            "polyfills": "src/polyfills.ts",
-            "assets": ["src/assets", "src/favicon.ico"],
-            "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
-            ],
-            "scripts": [],
-            "aot": true,
-            "webWorkerTsConfig": "tsconfig.worker.json"
+            "targetLabel": "//src:prodapp",
+            "bazelCommand": "build"
           },
           "configurations": {
             "production": {
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "extractCss": true,
-              "namedChunks": false,
-              "aot": true,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ]
+              "targetLabel": "//src:prodapp"
             }
           }
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
+          "builder": "@angular/bazel:build",
           "options": {
-            "browserTarget": "cardinal-qa-poc:build"
+            "targetLabel": "//src:devserver",
+            "bazelCommand": "run",
+            "watch": true
           },
           "configurations": {
             "production": {
-              "browserTarget": "cardinal-qa-poc:build:production"
+              "targetLabel": "//src:prodserver"
             }
           }
         },
@@ -63,18 +40,10 @@
           }
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular/bazel:build",
           "options": {
-            "main": "src/test.ts",
-            "karmaConfig": "./karma.conf.js",
-            "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "scripts": [],
-            "styles": [
-              "src/styles.css",
-              "node_modules/bootstrap/dist/css/bootstrap.min.css"
-            ],
-            "assets": ["src/assets", "src/favicon.ico"]
+            "bazelCommand": "test",
+            "targetLabel": "//src:test"
           }
         },
         "lint": {
@@ -92,10 +61,15 @@
       "projectType": "application",
       "architect": {
         "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
+          "builder": "@angular/bazel:build",
           "options": {
-            "protractorConfig": "./protractor.conf.js",
-            "devServerTarget": "cardinal-qa-poc:serve"
+            "bazelCommand": "test",
+            "targetLabel": "//e2e:devserver_test"
+          },
+          "configurations": {
+            "production": {
+              "targetLabel": "//e2e:prodserver_test"
+            }
           }
         },
         "lint": {
