--- a/angular.json
+++ b/angular.json
@@ -9,27 +9,50 @@
       "projectType": "application",
       "architect": {
         "build": {
-          "builder": "@angular/bazel:build",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "targetLabel": "//src:prodapp",
-            "bazelCommand": "build"
+            "outputPath": "dist",
+            "index": "src/index.html",
+            "main": "src/main.ts",
+            "tsConfig": "src/tsconfig.app.json",
+            "polyfills": "src/polyfills.ts",
+            "assets": ["src/assets", "src/favicon.ico"],
+            "styles": [
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+            ],
+            "scripts": [],
+            "aot": true,
+            "webWorkerTsConfig": "tsconfig.worker.json"
           },
           "configurations": {
             "production": {
-              "targetLabel": "//src:prodapp"
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "aot": true,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.prod.ts"
+                }
+              ]
             }
           }
         },
         "serve": {
-          "builder": "@angular/bazel:build",
+          "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "targetLabel": "//src:devserver",
-            "bazelCommand": "run",
-            "watch": true
+            "browserTarget": "cardinal-qa-poc:build"
           },
           "configurations": {
             "production": {
-              "targetLabel": "//src:prodserver"
+              "browserTarget": "cardinal-qa-poc:build:production"
             }
           }
         },
@@ -40,16 +63,28 @@
           }
         },
         "test": {
-          "builder": "@angular/bazel:build",
+          "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "bazelCommand": "test",
-            "targetLabel": "//src:test"
+            "main": "src/test.ts",
+            "karmaConfig": "./karma.conf.js",
+            "polyfills": "src/polyfills.ts",
+            "tsConfig": "src/tsconfig.spec.json",
+            "scripts": [],
+            "styles": [
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
+            ],
+            "assets": ["src/assets", "src/favicon.ico"]
           }
         },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["src/tsconfig.app.json","src/tsconfig.spec.json","tsconfig.worker.json"],
+            "tsConfig": [
+              "src/tsconfig.app.json",
+              "src/tsconfig.spec.json",
+              "tsconfig.worker.json"
+            ],
             "exclude": ["**/node_modules/**"]
           }
         }
@@ -61,15 +96,10 @@
       "projectType": "application",
       "architect": {
         "e2e": {
-          "builder": "@angular/bazel:build",
+          "builder": "@angular-devkit/build-angular:protractor",
           "options": {
-            "bazelCommand": "test",
-            "targetLabel": "//e2e:devserver_test"
-          },
-          "configurations": {
-            "production": {
-              "targetLabel": "//e2e:prodserver_test"
-            }
+            "protractorConfig": "./protractor.conf.js",
+            "devServerTarget": "cardinal-qa-poc:serve"
           }
         },
         "lint": {
