--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -5,9 +5,7 @@
     "baseUrl": "./",
     "types": []
   },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts",
-    "src/**/*.worker.ts"
-  ]
+  "include": ["main.ts"],
+
+  "exclude": ["test.ts", "**/*.spec.ts", "src/**/*.worker.ts"]
 }
