--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -7,5 +7,8 @@
   },
   "include": ["main.ts"],
 
-  "exclude": ["test.ts", "**/*.spec.ts", "src/**/*.worker.ts"]
+  "exclude": ["test.ts", "**/*.spec.ts", "src/**/*.worker.ts"],
+  "angularCompilerOptions": {
+    "enableIvy": true
+  }
 }
