feature: secure routes using Auth0 library

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@angular/platform-browser": "^8.0.2",
     "@angular/platform-browser-dynamic": "^8.0.2",
     "@angular/router": "^8.0.2",
+    "@auth0/auth0-spa-js": "^1.0.1",
     "angular-jwt": "^0.1.11",
     "apollo-angular": "^1.6.0",
     "apollo-angular-link-http": "^1.8.0",
