--- a/package.json
+++ b/package.json
@@ -16,25 +16,27 @@
     "postinstallx": "ngc -p ./angular-metadata.tsconfig.json",
     "start": "ng serve",
     "start-prod": "ng serve --prod",
-    "build": "ng build --prod",
+    "build": "ng build",
+    "build-prod": "ng build --prod",
     "build-bazel": "ng build --prod --leaveBazelFilesOnDisk",
     "test": "ng test",
     "lint": "ng lint",
+    "lint-fix": "ng lint --fix",
     "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.1.1",
+    "@angular/animations": "^8.2.0-next.1",
     "@angular/cdk": "^8.0.2",
-    "@angular/common": "^8.1.1",
-    "@angular/compiler": "^8.1.1",
-    "@angular/core": "^8.1.1",
+    "@angular/common": "^8.2.0-next.1",
+    "@angular/compiler": "^8.2.0-next.1",
+    "@angular/core": "^8.2.0-next.1",
     "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "^8.1.1",
+    "@angular/forms": "^8.2.0-next.1",
     "@angular/material": "^8.0.2",
-    "@angular/platform-browser": "^8.1.1",
-    "@angular/platform-browser-dynamic": "^8.1.1",
-    "@angular/router": "^8.1.1",
+    "@angular/platform-browser": "^8.2.0-next.1",
+    "@angular/platform-browser-dynamic": "^8.2.0-next.1",
+    "@angular/router": "^8.2.0-next.1",
     "@auth0/auth0-spa-js": "^1.0.1",
     "@ngrx/effects": "^8.1.0",
     "@ngrx/store": "^8.1.0",
@@ -58,11 +60,11 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.800.0",
-    "@angular/bazel": "^8.1.1",
-    "@angular/cli": "^8.0.3",
-    "@angular/compiler-cli": "^8.1.1",
-    "@angular/language-service": "^8.1.1",
+    "@angular-devkit/build-angular": "~0.801.1",
+    "@angular/bazel": "^8.2.0-next.1",
+    "@angular/cli": "^8.1.1",
+    "@angular/compiler-cli": "^8.2.0-next.1",
+    "@angular/language-service": "^8.2.0-next.1",
     "@bazel/bazel": "^0.26.0",
     "@bazel/ibazel": "^0.10.2",
     "@bazel/karma": "0.31.1",
