--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,12 +1,12 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app",
+    "outDir": "../out-tsc/app",
+    "module": "es2015",
     "types": []
   },
-  "include": ["src/**/*.ts"],
   "exclude": ["test.ts", "**/*.spec.ts"],
   "angularCompilerOptions": {
-    "enableIvy": true
+    "enableIvy": false
   }
 }
