--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "experimentalDecorators": true,
     "target": "es2015",
     "typeRoots": ["node_modules/@types"],
-    "lib": ["es2015", "dom", "esnext.asynciterable"],
+    "lib": ["esnext", "dom", "esnext.asynciterable"],
     "paths": {
       "@shared/*": ["src/app/shared/*"],
       "@services/*": ["src/app/shared/services/*"],
