chore: update packages

--- a/package.json
+++ b/package.json
@@ -26,52 +26,53 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.0-next.1",
-    "@angular/cdk": "^8.0.2",
-    "@angular/common": "^8.2.0-next.1",
-    "@angular/compiler": "^8.2.0-next.1",
-    "@angular/core": "^8.2.0-next.1",
-    "@angular/flex-layout": "^8.0.0-beta.26",
-    "@angular/forms": "^8.2.0-next.1",
-    "@angular/material": "^8.0.2",
-    "@angular/platform-browser": "^8.2.0-next.1",
-    "@angular/platform-browser-dynamic": "^8.2.0-next.1",
-    "@angular/router": "^8.2.0-next.1",
-    "@auth0/auth0-spa-js": "^1.0.1",
-    "@ngrx/effects": "^8.1.0",
-    "@ngrx/store": "^8.1.0",
-    "@ngrx/store-devtools": "^8.1.0",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/flex-layout": "^8.0.0-beta.27",
+    "@angular/forms": "^8.2.14",
+    "@angular/http": "^7.2.15",
+    "@angular/material": "^8.2.3",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "@auth0/auth0-spa-js": "^1.6.0",
+    "@ngrx/effects": "^8.6.0",
+    "@ngrx/store": "^8.6.0",
+    "@ngrx/store-devtools": "^8.6.0",
     "angular-jwt": "^0.1.11",
-    "apollo-angular": "^1.6.0",
-    "apollo-angular-link-http": "^1.8.0",
-    "apollo-cache-inmemory": "^1.6.2",
-    "apollo-client": "^2.6.3",
-    "apollo-link": "^1.2.12",
-    "auth0-js": "^9.11.0",
-    "bootstrap": "^4.3.1",
-    "core-js": "^3.1.4",
-    "graphql": "^14.3.1",
+    "apollo-angular": "^1.8.0",
+    "apollo-angular-link-http": "^1.9.0",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.13",
+    "auth0-js": "^9.12.1",
+    "bootstrap": "^4.4.1",
+    "core-js": "^3.6.0",
+    "graphql": "^14.5.8",
     "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
-    "popper.js": "^1.14.7",
-    "rxjs": "^6.5.2",
-    "rxjs-compat": "^6.5.2",
-    "zone.js": "~0.9.1"
+    "popper.js": "^1.16.0",
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.1",
-    "@angular/bazel": "^8.2.0-next.1",
+    "@angular-devkit/build-angular": "~0.803.21",
+    "@angular/bazel": "^8.2.14",
     "@angular/cli": "^8.3.21",
-    "@angular/compiler-cli": "^8.2.0-next.1",
-    "@angular/language-service": "^8.2.0-next.1",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@bazel/bazel": "^0.26.0",
     "@bazel/ibazel": "^0.10.2",
     "@bazel/karma": "0.31.1",
     "@bazel/typescript": "0.33.1",
     "@fortawesome/fontawesome-free": "^5.9.0",
     "@types/angular-jwt": "0.0.29",
-    "@types/graphql": "^14.2.2",
+    "@types/graphql": "^14.5.0",
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^12.0.10",
