--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "@types/graphql": "^14.5.0",
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^13.1.0",
+    "@types/node": "^13.1.1",
     "codelyzer": "^5.0.1",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
@@ -92,5 +92,8 @@
     "tslint": "^5.18.0",
     "typescript": "^3.4.5",
     "webpack": "^4.38.2"
+  },
+  "resolutions": {
+    "graphql": "14.5.8"
   }
 }
