--- a/package.json
+++ b/package.json
@@ -45,13 +45,16 @@
     "angular-jwt": "^0.1.11",
     "apollo-angular": "^1.8.0",
     "apollo-angular-link-http": "^1.9.0",
+    "apollo-angular-link-http-batch": "^1.7.0",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
     "apollo-link": "^1.2.13",
+    "apollo-link-context": "^1.0.19",
     "auth0-js": "^9.12.1",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.1",
     "graphql": "^14.5.8",
+    "graphql-code-generator": "^0.18.2",
     "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
