--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
     "apollo-angular": "^1.8.0",
+    "apollo-angular-cache-ngrx": "^1.0.0-beta.2",
     "apollo-angular-link-http": "^1.9.0",
     "apollo-angular-link-http-batch": "^1.7.0",
     "apollo-cache-inmemory": "^1.6.5",
@@ -59,6 +60,7 @@
     "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
+    "ngrx-store-localstorage": "^8.0.0",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
