--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@ngrx/data": "^8.6.0",
     "@ngrx/effects": "^8.6.0",
+    "@ngrx/entity": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
     "apollo-angular": "^1.8.0",
@@ -60,7 +62,7 @@
     "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
-    "ngrx-store-localstorage": "^8.0.0",
+    "ngrx-store-persist": "^1.0.20",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
