--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/router": "^8.2.14",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@ngrx/data": "^8.6.0",
     "@ngrx/effects": "^8.6.0",
