--- a/package.json
+++ b/package.json
@@ -40,10 +40,12 @@
     "@angular/router": "^8.2.14",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@ngrx/data": "^8.6.0",
     "@ngrx/effects": "^8.6.0",
     "@ngrx/entity": "^8.6.0",
+    "@ngrx/router-store": "^8.6.0",
     "@ngrx/store": "^8.6.0",
     "@ngrx/store-devtools": "^8.6.0",
     "apollo-angular": "^1.8.0",
