--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "typescript.tsdk": "node_modules\\typescript\\lib",
+  "typescript.tsdk": "node_modules/typescript/lib",
   "window.zoomLevel": 1,
   "editor.fontSize": 12,
   "terminal.integrated.fontSize": 12,
