--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@bazel/karma": "0.31.1",
     "@bazel/typescript": "0.33.1",
     "@fortawesome/fontawesome-free": "^5.9.0",
+    "@ngrx/schematics": "^8.6.0",
     "@types/angular-jwt": "0.0.29",
     "@types/graphql": "^14.5.0",
     "@types/jasmine": "^3.3.13",
