--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": {
     "name": "Sipho Hlophe",
     "email": "psyphore@gmail.com",
-    "url": "https://psyphore.github.io"
+    "url": "https://psyphore.netlify.com"
   },
   "repository": {
     "type": "git",
@@ -42,9 +42,12 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@ngxs/form-plugin": "^3.6.2",
+    "@ngxs/router-plugin": "^3.6.2",
+    "@ngxs/schematics": "0.0.1-alpha.5",
+    "@ngxs/storage-plugin": "^3.6.2",
     "@ngxs/store": "^3.6.2",
     "apollo-angular": "^1.8.0",
-    "apollo-angular-cache-ngrx": "^1.0.0-beta.2",
     "apollo-angular-link-http": "^1.9.0",
     "apollo-angular-link-http-batch": "^1.7.0",
     "apollo-cache-inmemory": "^1.6.5",
@@ -59,7 +62,6 @@
     "graphql-tag": "^2.10.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
-    "ngrx-store-persist": "^1.0.20",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
@@ -76,7 +78,7 @@
     "@bazel/karma": "0.31.1",
     "@bazel/typescript": "0.33.1",
     "@fortawesome/fontawesome-free": "^5.9.0",
-    "@ngrx/schematics": "^8.6.0",
+    "@ngxs/devtools-plugin": "^3.6.2",
     "@types/angular-jwt": "0.0.29",
     "@types/graphql": "^14.5.0",
     "@types/jasmine": "^3.3.13",
