feat: use state selectors - update all state selectors to use @Selector instead of snapshot - attempt to dispatch actions after signing in

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "lint-fix": "ng lint --fix",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start:debug": "ng serve --port 4200"
   },
   "private": true,
   "dependencies": {
