--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.0",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/bazel": "^8.2.14",
     "@angular/cli": "^8.3.21",
     "@angular/compiler-cli": "^8.2.14",
@@ -88,6 +88,7 @@
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^13.1.1",
+    "acorn": ">=6.4.1",
     "codelyzer": "^5.0.1",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
@@ -97,15 +98,14 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
+    "minimist": ">=1.2.2",
     "protractor": "^5.4.2",
     "rxjs-tslint": "^0.1.7",
     "ts-node": "~8.5.4",
     "tslib": "^1.10.0",
     "tslint": "^5.18.0",
-    "typescript": "^3.5.3",
-    "webpack": "^4.38.2",
-    "minimist": ">=1.2.2",
-    "acorn": ">=6.4.1"
+    "typescript": "^3.8.3",
+    "webpack": "^4.38.2"
   },
   "resolutions": {
     "graphql": "14.5.8"
