chore: package update

--- a/package.json
+++ b/package.json
@@ -100,7 +100,9 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "minimist": ">=1.2.2",
     "protractor": "^5.4.2",
+    "rollup": "^2.3.2",
     "rxjs-tslint": "^0.1.7",
+    "terser": "^4.3.1",
     "ts-node": "~8.5.4",
     "tslib": "^1.10.0",
     "tslint": "^5.18.0",
