chore: package update

--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
     "@angular/common": "^8.2.14",
     "@angular/compiler": "^8.2.14",
     "@angular/core": "^8.2.14",
-    "@angular/flex-layout": "^8.0.0-beta.27",
     "@angular/forms": "^8.2.14",
-    "@angular/http": "^7.2.15",
     "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.2.14",
     "@angular/platform-browser-dynamic": "^8.2.14",
@@ -73,9 +71,10 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.24",
-    "@angular/bazel": "^8.2.14",
+    "@angular/bazel": "^9.1.0",
     "@angular/cli": "^8.3.21",
     "@angular/compiler-cli": "^8.2.14",
+    "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/language-service": "^8.2.14",
     "@bazel/bazel": "^2.0.0",
     "@bazel/ibazel": "^0.11.0",
@@ -101,6 +100,7 @@
     "minimist": ">=1.2.2",
     "protractor": "^5.4.2",
     "rollup": "^2.3.2",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rxjs-tslint": "^0.1.7",
     "terser": "^4.3.1",
     "ts-node": "~8.5.4",
