--- a/package.json
+++ b/package.json
@@ -72,13 +72,13 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.803.24",
     "@angular/bazel": "^9.1.0",
-    "@angular/cli": "^8.3.21",
+    "@angular/cli": "^9.1.0",
     "@angular/compiler-cli": "^8.2.14",
     "@angular/flex-layout": "^9.0.0-beta.29",
     "@angular/language-service": "^8.2.14",
     "@bazel/bazel": "^2.0.0",
     "@bazel/ibazel": "^0.11.0",
-    "@bazel/karma": "0.31.1",
+    "@bazel/karma": "^1.5.0",
     "@bazel/typescript": "0.33.1",
     "@fortawesome/fontawesome-free": "^5.9.0",
     "@ngxs/devtools-plugin": "^3.6.2",
@@ -105,7 +105,7 @@
     "terser": "^4.3.1",
     "ts-node": "~8.5.4",
     "tslib": "^1.10.0",
-    "tslint": "^5.18.0",
+    "tslint": "^6.1.1",
     "typescript": "^3.8.3",
     "webpack": "^4.38.2"
   },
