--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^9.1.0",
-    "@angular/cdk": "^8.2.3",
+    "@angular/cdk": "^9.2.0",
     "@angular/common": "^9.1.0",
     "@angular/compiler": "^9.1.0",
     "@angular/core": "^9.1.0",
     "@angular/forms": "^9.1.0",
-    "@angular/material": "^8.2.3",
+    "@angular/material": "^9.2.0",
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
     "@angular/router": "^9.1.0",
@@ -62,7 +62,6 @@
     "graphql": "^14.5.8",
     "graphql-code-generator": "^0.18.2",
     "graphql-tag": "^2.10.0",
-    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
@@ -97,7 +96,8 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.2",
-    "minimist": ">=1.2.2",
+    "lodash": "^4.17.15",
+    "minimist": "^1.2.5",
     "protractor": "^5.4.2",
     "rollup": "^2.3.2",
     "rollup-plugin-commonjs": "^10.1.0",
