--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/compiler": "^9.1.0",
     "@angular/core": "^9.1.0",
     "@angular/forms": "^9.1.0",
+    "@angular/localize": "^9.1.0",
     "@angular/material": "^9.2.0",
     "@angular/platform-browser": "^9.1.0",
     "@angular/platform-browser-dynamic": "^9.1.0",
@@ -102,7 +103,7 @@
     "rollup": "^2.3.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rxjs-tslint": "^0.1.7",
-    "terser": "^4.3.1",
+    "terser": "^4.6.10",
     "ts-node": "~8.5.4",
     "tslib": "^1.10.0",
     "tslint": "^6.1.1",
