--- a/package.json
+++ b/package.json
@@ -45,11 +45,13 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
     "@fortawesome/free-brands-svg-icons": "^5.12.0",
     "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@ngxs/devtools-plugin": "^3.3.2",
     "@ngxs/form-plugin": "^3.6.2",
+    "@ngxs/logger-plugin": "^3.3.2",
     "@ngxs/router-plugin": "^3.6.2",
     "@ngxs/schematics": "0.0.1-alpha.5",
     "@ngxs/storage-plugin": "^3.6.2",
-    "@ngxs/store": "^3.6.2",
+    "@ngxs/store": "^3.3.2",
     "apollo-angular": "^1.8.0",
     "apollo-angular-link-http": "^1.9.0",
     "apollo-angular-link-http-batch": "^1.7.0",
@@ -82,6 +84,7 @@
     "@bazel/typescript": "0.33.1",
     "@fortawesome/fontawesome-free": "^5.9.0",
     "@ngxs/devtools-plugin": "^3.6.2",
+    "@ngxs/schematics": "^0.0.1-alpha.5",
     "@types/angular-jwt": "0.0.29",
     "@types/graphql": "^14.5.0",
     "@types/jasmine": "^3.3.13",
