--- a/angular.json
+++ b/angular.json
@@ -16,10 +16,7 @@
             "main": "src/main.ts",
             "tsConfig": "src/tsconfig.app.json",
             "polyfills": "src/polyfills.ts",
-            "assets": [
-              "src/assets",
-              "src/favicon.ico"
-            ],
+            "assets": ["src/assets", "src/favicon.ico"],
             "styles": [
               "src/custom-theme.scss",
               "src/styles.css",
@@ -66,6 +63,14 @@
                   "with": "src/environments/environment.hp.ts"
                 }
               ]
+            },
+            "e2e": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.e2e.ts"
+                }
+              ]
             }
           }
         },
@@ -73,10 +78,6 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "qa-poc:build",
-            "host": "0.0.0.0",
-            "port": 4200,
-            "disableHostCheck": true,
-            "publicHost": "localhost",
             "aot": true,
             "liveReload": true
           },
@@ -89,6 +90,9 @@
             },
             "hp": {
               "browserTarget": "qa-poc:build:hp"
+            },
+            "e2e": {
+              "browserTarget": "qa-poc:build:e2e"
             }
           }
         },
@@ -111,10 +115,7 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "assets": [
-              "src/assets",
-              "src/favicon.ico"
-            ]
+            "assets": ["src/assets", "src/favicon.ico"]
           }
         },
         "lint": {
@@ -125,9 +126,7 @@
               "src/tsconfig.spec.json",
               "tsconfig.worker.json"
             ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
@@ -144,15 +143,18 @@
             "devServerTarget": "qa-poc:serve"
           }
         },
+        "e2e-signin": {
+          "builder": "@angular-devkit/build-angular:protractor",
+          "options": {
+            "protractorConfig": "./e2e/config/signin.conf.js",
+            "devServerTarget": "qa-poc:serve:e2e"
+          }
+        },
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "e2e/tsconfig.e2e.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+            "tsConfig": ["e2e/tsconfig.e2e.json"],
+            "exclude": ["**/node_modules/**"]
           }
         }
       }
