--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "./node_modules/.bin/ng test",
     "lint": "./node_modules/.bin/ng lint",
     "lint-fix": "./node_modules/.bin/ng lint --fix",
-    "e2e": "./node_modules/.bin/ng e2e",
+    "e2e": "./node_modules/.bin/ng e2e --port 4210",
     "start:debug": "./node_modules/.bin/ng serve --port 4200",
     "start:acer": "ng serve --port 4200 --configuration=acer",
     "start:hp": "ng serve --port 4200 --configuration=hp"
@@ -103,6 +103,7 @@
     "lodash": "^4.17.15",
     "minimist": "^1.2.5",
     "protractor": "^5.4.2",
+    "protractor-beautiful-reporter": "^1.3.5",
     "rollup": "^2.3.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rxjs-tslint": "^0.1.7",
