--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint": "./node_modules/.bin/ng lint",
     "lint-fix": "./node_modules/.bin/ng lint --fix",
     "e2e": "./node_modules/.bin/ng e2e --port 4210",
-    "start:debug": "./node_modules/.bin/ng serve --port 4200",
+    "start:debug": "./node_modules/.bin/ng serve --port 4300 -o",
     "start:acer": "ng serve --port 4200 --configuration=acer",
     "start:hp": "ng serve --port 4200 --configuration=hp"
   },
