--- a/package.json
+++ b/package.json
@@ -30,17 +30,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.0",
+    "@angular/animations": "^10.0.9",
     "@angular/cdk": "^9.2.0",
-    "@angular/common": "^9.1.0",
-    "@angular/compiler": "^9.1.0",
-    "@angular/core": "^9.1.0",
-    "@angular/forms": "^9.1.0",
-    "@angular/localize": "^9.1.0",
+    "@angular/common": "^10.0.9",
+    "@angular/compiler": "^10.0.9",
+    "@angular/core": "^10.0.9",
+    "@angular/forms": "^10.0.9",
+    "@angular/localize": "^10.0.9",
     "@angular/material": "^9.2.0",
-    "@angular/platform-browser": "^9.1.0",
-    "@angular/platform-browser-dynamic": "^9.1.0",
-    "@angular/router": "^9.1.0",
+    "@angular/platform-browser": "^10.0.9",
+    "@angular/platform-browser-dynamic": "^10.0.9",
+    "@angular/router": "^10.0.9",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
@@ -72,16 +72,16 @@
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.24",
-    "@angular/bazel": "^9.1.0",
-    "@angular/cli": "^9.1.0",
-    "@angular/compiler-cli": "^9.1.0",
+    "@angular-devkit/build-angular": "^0.1000.6",
+    "@angular/bazel": "^10.0.9",
+    "@angular/cli": "^10.0.6",
+    "@angular/compiler-cli": "^10.0.9",
     "@angular/flex-layout": "^9.0.0-beta.29",
-    "@angular/language-service": "^9.1.0",
+    "@angular/language-service": "^10.0.9",
     "@bazel/bazel": "^2.0.0",
     "@bazel/ibazel": "^0.11.0",
     "@bazel/karma": "^1.5.0",
-    "@bazel/typescript": "0.33.1",
+    "@bazel/typescript": "2.0.2",
     "@fortawesome/fontawesome-free": "^5.9.0",
     "@ngxs/devtools-plugin": "^3.6.2",
     "@ngxs/schematics": "^0.0.1-alpha.5",
@@ -91,26 +91,26 @@
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^13.1.1",
     "acorn": ">=6.4.1",
-    "codelyzer": "^5.0.1",
-    "jasmine-core": "^3.4.0",
-    "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^4.1.0",
-    "karma-chrome-launcher": "^3.1.0",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.5.0",
+    "jasmine-spec-reporter": "~5.0.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
-    "karma-coverage-istanbul-reporter": "^2.1.1",
-    "karma-jasmine": "^2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~3.3.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
     "lodash": "^4.17.15",
     "minimist": "^1.2.5",
-    "protractor": "^5.4.2",
+    "protractor": "~7.0.0",
     "protractor-beautiful-reporter": "^1.3.5",
     "rollup": "^2.3.2",
     "rollup-plugin-commonjs": "^10.1.0",
     "rxjs-tslint": "^0.1.7",
     "terser": "^4.6.10",
     "ts-node": "~8.5.4",
-    "tslib": "^1.10.0",
-    "tslint": "^6.1.1",
+    "tslib": "^2.0.0",
+    "tslint": "~6.1.0",
     "typescript": "^3.8.3",
     "webpack": "^4.38.2"
   },
