--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/platform-browser": "^10.0.9",
     "@angular/platform-browser-dynamic": "^10.0.9",
     "@angular/router": "^10.0.9",
+    "@apollo/client": "^3.1.3",
     "@fortawesome/angular-fontawesome": "^0.6.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
@@ -53,20 +54,10 @@
     "@ngxs/storage-plugin": "^3.6.2",
     "@ngxs/store": "^3.3.2",
     "apollo-angular": "^2.0.3",
-    "apollo-angular-link-http": "^1.9.0",
-    "apollo-angular-link-http-batch": "^1.7.0",
-    "apollo-cache-inmemory": "^1.6.5",
-    "apollo-client": "^2.6.8",
-    "apollo-link": "^1.2.13",
-    "apollo-link-context": "^1.0.19",
-    "apollo-link-error": "^1.1.12",
-    "bootstrap": "^4.4.1",
     "core-js": "^3.6.1",
     "graphql": "^15.3.0",
     "graphql-code-generator": "^0.18.2",
     "graphql-tag": "^2.10.0",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.16.0",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
     "zone.js": "^0.10.2"
