--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,33 @@
-/*
-  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
-  It is not intended to be used to perform a compilation.
-
-  To learn more about this file see: https://angular.io/config/solution-tsconfig.
-*/
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./src/tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.worker.json"
-    },
-    {
-      "path": "./src/tsconfig.spec.json"
+  "compileOnSave": false,
+  "compilerOptions": {
+    "importHelpers": true,
+    "resolveJsonModule": true,
+    "downlevelIteration": true,
+    "outDir": "./dist/out-tsc",
+    "baseUrl": "./",
+    "sourceMap": true,
+    "declaration": false,
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "target": "es2015",
+    "typeRoots": ["node_modules/@types"],
+    "lib": ["esnext", "dom", "esnext.asynciterable"],
+    "paths": {
+      "@shared/*": ["src/app/shared/*"],
+      "@services/*": ["src/app/shared/services/*"],
+      "@root-store/*": ["src/app/root-store/*"],
+      "@views/*": ["src/app/views/*"],
+      "@models/*": ["src/app/shared/interfaces/*"],
+      "@enums/*": ["src/app/shared/enums/*"],
+      "@environments/*": ["src/environments/*"],
+      "@graphql/*": ["src/app/shared/graphql/*"],
+      "@directives/*": ["src/app/shared/directives/*"],
+      "@guards/*": ["src/app/shared/guards/*"],
+      "@interceptors/*": ["src/app/shared/interceptors/*"],
+      "@workers/*": ["src/app/shared/workers/*"]
     }
-  ]
+  },
+  "include": ["src/main.ts", "src/polyfills.ts"]
 }
