--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,8 @@
   "emmet.excludeLanguages": ["typescript", "typescriptreact", "javascript"],
   "workbench.editor.showTabs": true,
   "breadcrumbs.enabled": true,
-  "editor.fontFamily": "'Fira Code','Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
-  "terminal.integrated.fontFamily": "'Fira Code','Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'",
+  "editor.fontFamily": "'Fira Code'",
+  "editor.fontLigatures": true,
+  "terminal.integrated.fontFamily": "'Fira Code'",
   "terminal.integrated.fontWeightBold": "normal"
 }
